--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://fonts.googleapis.com/css?family=Tomorrow:400,700&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@900&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="css/style.css">
      <title>Coderama</title>
 </head>
+
 <body>
      <div class="contenedor-general">
-          <h1 class="titulo">Coderama</h1>
+          <h1 class="titulo">"Coderama"</h1>
           <div class="contenedor-tarjetas">
-          
-          </div> 
+
+          </div>
           <div class="pantalla-bloqueada">
                <h2 class="mensaje">¡Has perdido el juego!</h2>
           </div>
      </div>
-     
+
      <script src="js/script.js"></script>
 </body>
 </html>
